# pdm-nested-local

app/: pyproject.toml
dep/: pyproject.toml
lib/: pyproject.toml
