[project]
name = "app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Martin Kühl", email = "martin.kuehl@posteo.net"},
]
dependencies = [
    "lib @ file:///${PROJECT_ROOT}/../lib",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
